src/app/feed/user-info-box/user-info-box.component.scss
:host {
	display: block;
}

.info-box {
	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
	border-radius: 2px;
	min-height: 420px;
	width: 100%;
	margin-bottom: 20px;
}

.image-gallery {
	width: 100%;
	height: 150px;
	position: relative;
}

.profile-banner-image {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: #1DA1F2;

	img {
		width: 100%;
		height: 100%;
	}
}

.profile-image {
	position: absolute;
	bottom: 0;
	left: 50px;
	background: #FFFFFF;
	height: 94px;
	width: 94px;
	img {
		margin: 5px;
		height: calc(100% - 10px);
	}
}

.banner {
	height: 200px;
	width: 600px;
}

.heading {
	width: 100%;
	padding: 15px;
	border-bottom: 1px solid rgba(0,0,0,0.10);

	h2 {
		margin: 0 0 10px 0;
	}

	span {
		font-size: 13px;
		color: #777;
	}
}

.desc {
	padding: 15px;
}

.listing {
	padding: 0px 15px 15px 15px;
}

.list-item {
	padding: 3px 0 3px 0;

	.item-label {
		font-weight: 700;
	}
}

.gallery {
	padding: 15px;

	h3 {
		margin-top: 0;
	}
}

.gallery-container {
	display: flex;
	justify-content: flex-start;
	flex-wrap: wrap;
}

.gallery-item {
	margin-right: 10px;
	width: 94px;
	margin-bottom: 10px;

	&:last-child {
		margin-right: 0;
	}
}

.item-image {

	display: flex;
	justify-content: center;

	img {
		width: 94px;
		height: 94px;
	}
}

.item-desc {
	text-align: center;
}

.item-handle {
	font-size: 13px;
	color: #777;
	word-break: break-all;
}

.item-followers {
	font-size: 13px;
}

.preloader {
	width: 100%;
	height: 420px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.loading {
	border-radius: 50%;
	margin: 0 auto;
	width: 24px;
	height: 24px;
	border: 2px solid rgb(216,27,96);
	border-top-color: rgba(216,97,96,0.2);
	animation: spin 1s infinite linear;
}

@keyframes spin {
	0% {
	transform: rotate(0deg);
	}
	100% {
	transform: rotate(360deg);
	}
}

